samples/_failures_safe/1761340114_511685_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ea7b23e1.c: In function ‘main’:
./samples/SAFE/__tmp_ea7b23e1.c:157:9: error: expected expression at end of input
  157 |         printf("%d. %s\n", i +
      |         ^~~~~~
./samples/SAFE/__tmp_ea7b23e1.c:157:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ea7b23e1.c:157:9: error: expected declaration or statement at end of input
